# santa-lang-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  mkdocs.yml
.claude/agents/: api-design-reviewer.md  clean-code-reviewer.md  interpreter-architect.md  performance-optimizer.md  rust-code-reviewer.md  security-auditor.md  test-coverage-reviewer.md
.claude/commands/: commit.md
.github/: release-drafter.yml
.github/workflows/: benchmark.yml  build-cli.yml  build-docs.yml  build-jupyter.yml  build-lambda.yml  build-php-ext.yml  build-wasm.yml  build-web.yml  build.yml  publish.yml  test.yml
benchmarks/: .gitignore  Cargo.toml  Dockerfile  README.md
benchmarks/benches/: evaluator.rs  language.rs
benchmarks/fixtures/: aoc2023_day10.santa  empty.santa  fibonacci.santa  list_processing.santa  pattern_matching.santa
benchmarks/scripts/: compare_results.py  visualize_results.py
cli/: Cargo.toml
cli/src/: external_functions.rs  main.rs  tests.rs
docs/: builtins.md  cli.md  examples.md  index.md  lambda.md  language.md  php-ext.md  runner.js  runner.md  wasm.md  web.md
docs/assets/: runner.js
docs/performance/: COLLECTION_OPS_PLAN.md  DICTIONARY_HYBRID_PLAN.md  FUNCTION_CALL_PLAN.md  HASHMAP_LOOKUP_PLAN.md  OBJECT_POOL_PLAN.md  OPTIMIZATION_README.md
lambda/: Cargo.toml
lambda/fixtures/: fibonacci.santa
lambda/src/: main.rs
lang/: Cargo.toml
lang/src/: lib.rs
lang/src/evaluator/: environment.rs  function.rs  index.rs  infix.rs  lazy_sequence.rs  matcher.rs  mod.rs  object.rs  object_pool.rs  tests.rs
lang/src/evaluator/builtins/: basic.rs  bitwise.rs  collection.rs  macros.rs  math.rs  miscellaneous.rs  mod.rs  operators.rs  string.rs
lang/src/evaluator/tests/: assignment.rs  errors.rs  functions.rs  indexing.rs  literals.rs  matches.rs  mod.rs  operators.rs  sections.rs
lang/src/evaluator/tests/builtins/: basic.rs  bitwise.rs  collection.rs  math.rs  miscellaneous.rs  mod.rs  string.rs
lang/src/formatter/: README.md  builder.rs  doc.rs  mod.rs  printer.rs  tests.rs
lang/src/lexer/: mod.rs  tests.rs  token.rs
lang/src/parser/: ast.rs  mod.rs  tests.rs
lang/src/runner/: mod.rs  tests.rs
php-ext/: Cargo.toml
php-ext/fixtures/: script.santa  solution.santa
php-ext/src/: external_functions.rs
runtime/cli/: Cargo.toml  build.Dockerfile
runtime/cli/src/: external_functions.rs  main.rs  tests.rs
runtime/jupyter/: Cargo.toml  build.Dockerfile  example.ipynb
runtime/jupyter/src/: main.rs
runtime/lambda/: Cargo.toml  build.Dockerfile
runtime/lambda/src/: external_functions.rs  handler.rs  main.rs
runtime/php-ext/: Cargo.toml  build.Dockerfile
runtime/php-ext/fixtures/: test.php
runtime/php-ext/src/: external_functions.rs  lib.rs
runtime/wasm/: Cargo.toml
runtime/wasm/src/: external_functions.rs  lib.rs  tests.rs
wasm/: Cargo.toml
wasm/src/: external_functions.rs  lib.rs  tests.rs  translation.rs
web/: Cargo.toml
web/client/: next.config.js  package.json  worker.ts
web/client/components/: Editor.tsx  Navigation.tsx
web/client/pages/: index.tsx
web/client/styles/: globals.css
web/src/: external_functions.rs
