[workspace]
members = ["lang", "runtime/*"]
default-members = ["lang", "runtime/cli", "runtime/wasm", "runtime/lambda"]

[workspace.package]
version = "0.0.1"
authors = ["Edd Mann <the@eddmann.com>"]
documentation = "https://eddmann.com/santa-lang-rs/"

[profile.release]
strip = true
codegen-units = 1
lto = true
#debug = 1
