[package]
name = "santa-lambda"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "santa-lambda"
path = "src/main.rs"

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
santa-lang = { path = "../lang", version = "0.0.1", features = ["serde"] }
ureq = { version = "2.6.2", features = ["json"] }
