[package]
name = "santa-lambda"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"

[[bin]]
name = "santa-lambda"
path = "src/main.rs"

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
santa-lang = { path = "../lang", version = "*", features = ["serde"] }
ureq = { version = "2.6.2", features = ["json"] }
