[package]
name = "santa-lang"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"

[dependencies]
im-rc = { git = "https://github.com/eddmann/im-rs.git", features = ["pool"] }
ordered-float = "4.5"
regex = "1.12"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
expect-test = "1.0"

[features]
serde = ["dep:serde", "im-rc/serde", "ordered-float/serde"]
