[package]
name = "santa-wasm"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2021"

[lib]
name = "santa_lang"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.61"
santa-lang = { path = "../lang", version = "*", features = ["serde"]}
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "Performance", "PerformanceTiming"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
