[package]
name = "santa-jupyter"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[[bin]]
name = "santa-jupyter"
path = "src/main.rs"

[dependencies]
santa-lang = { path = "../../lang", version = "*" }
jupyter = "0.1.9"
jupyter-derive = "0.0.2"
clap = "4.5.23"
clap_derive = "4.5.22"
tracing-subscriber = "0.3.19"
