[package]
name = "santa-lambda"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[[bin]]
name = "santa-lambda"
path = "src/main.rs"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.133"
santa-lang = { path = "../../lang", version = "*", features = ["serde"] }
ureq = { version = "2.12.1", features = ["json"] }
