[package]
name = "santa-php-ext"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[lib]
name = "santa_lang"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.13.0"
santa-lang = { path = "../../lang", version = "*" }
ureq = "2.12.1"
url = "2.5.4"
