[package]
name = "santa-wasm"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition = "2024"

[lib]
name = "santa_lang_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
js-sys = "0.3.76"
santa-lang = { path = "../../lang", version = "*", features = ["serde"]}
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.76"
features = ["Window", "Performance", "PerformanceTiming"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
